<resources>
    <string name="app_name">HydrationTracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Location
    <string name="city">Write Location</string>
    <string name="get_location">Get Location</string>
    <string name="city_name">Enter City Name</string>
    <string name="no_location">Not able to get location</string>
    <string name="back">BACK</string>
    <string name="go">GO</string>

    //Weather
    <string name="daily_requirement">Daily Requirement Text</string>
    <string name="temperature">Temperature</string>
    <string name="suggestion_text_normal">It will be normal weather today,so your daily requirement stays the same</string>
    <string name="suggestion_text_warmer">It will be warm weather today,so your daily requirement has been increased</string>

    //(home_screen)
    <string name="amount1">Suggested Amount</string>
    <string name="amount2">Consumed Amount</string>
    <string name="drunk_it">Drunk It</string>

    <string name="empty_amount">-</string>
    <string name="quarter_amount">250ml</string>
    <string name="half_amount">500ml</string>
    <string name="three_quarters_amount">750ml</string>
    <string name="full_amount">1L</string>

    <string name="empty_amount_percentage">0%</string>
    <string name="full_amount_percentage">100%</string>

    //(top_left_drawer_menu_home_screen)
    <string name="day_tracking">Day Tracking</string>
    <string name="week_tracking">Week Tracking</string>
    <string name="month_tracking">Month Tracking</string>
    <string name="info">Info</string>
    <string name="info_beta">This section will provide all the necessary information about the app and how it works. As the app is currently in beta, this information is not yet available. Once the app is publicly released and available for download, this fragment will display comprehensive information on how to use the app.</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    //(bottom_nav_menu_home_screen)
    <string name="user">User</string>
    <string name="progress">Progress</string>
    <string name="home">Home</string>
    <string name="hydrationTracker">HydrationTracker</string>

    //TemperatureMonitoring
    <string name="alert1">Good Job!</string>
    <string name="alert2">You are staying hydrated!</string>
    <string name="ok">OK</string>

    //Progress
    <string name="weekly_tracking">Your Weekly Progress:</string>



    //(main_activity)
    <string name="ht">HYDRATION-TRACKER</string>
    <string name="username">Nickname</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="register">Register</string>
    //(wasserbedarf)
    <string name="ChangeWater">No worries, you can change your water demand afterwards!</string>
    <string name="backlogin">Back to LogIn</string>
    //(useract_daten)
    <string name="youracc">Your Hydration Account:</string>
    <string name="changedata">Change your data</string>
    <string name="backtomainsc">Back to Menu</string>
    //(registrierung)
    <string name="createuser">Create User: </string>
    <string name="userage">Age: </string>
    <string name="bodyheight">Bodyheight (cm):</string>
    <string name="sex">Gender: </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="setpp">Select Profile Picture</string>
    <string name="complregis">Finish registration</string>
    //(editUser)
    <string name="changeuserdata">Change User Data:</string>
    <string name="waterneed">Water Demand (ml)</string>
    <string name="changepp">Change Profile Picture</string>
    <string name="savechanges">Save Changes</string>
    <string name="addml1">+250ml</string>
    <string name="addml2">+500ml</string>
    <string name="addml3">+1000ml</string>
</resources>