<?xml version="1.0" encoding="utf-8"?>
<menu   xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/day_tracking"
            android:title="@string/day_tracking"
            android:icon="@drawable/baseline_calendar_view_day_24"/>
        <item
            android:id="@+id/week_tracking"
            android:title="@string/week_tracking"
            android:icon="@drawable/baseline_calendar_view_week_24"/>
        <item
            android:id="@+id/month_tracking"
            android:title="@string/month_tracking"
            android:icon="@drawable/baseline_calendar_view_month_24"/>
        <item
            android:id="@+id/info"
            android:title="@string/info"
            android:icon="@drawable/baseline_info_24"/>
    </group>
</menu>