<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createuser"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="32dp"
        android:textColor="@color/colorBlack"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/username"
        android:layout_marginBottom="16dp"
        android:textColor="@color/colorBlack"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"
        android:textColor="@color/colorBlack"/>

    <!-- Alter -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userage"
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorBlack"/>

    <SeekBar
        android:id="@+id/seekBarAlter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:min="7"
        android:max="100"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorDarkCyan"/>

    <TextView
        android:id="@+id/textViewAlter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="7"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorBlack"/>

    <!-- Körpergröße -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bodyheight"
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorBlack"/>

    <SeekBar
        android:id="@+id/seekBarGroesse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:max="220"
        android:min="90"
        android:backgroundTint="@color/colorDarkCyan" />

    <TextView
        android:id="@+id/textViewGroesse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="90"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorBlack"/>

    <!-- Geschlecht -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorBlack"/>

    <RadioGroup
        android:id="@+id/radioGroupGeschlecht"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <RadioButton
            android:id="@+id/radioMaennlich"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="@color/colorBlack"/>

        <RadioButton
            android:id="@+id/radioWeiblich"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="@color/colorBlack"/>

        <RadioButton
            android:id="@+id/radioDivers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/others"
            android:textColor="@color/colorBlack"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnSelectImage"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/setpp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorDarkCyan"
        android:textColor="@color/colorBlack"/>

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/person_dummy"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/complregis"
        android:backgroundTint="@color/colorDarkCyan"
        android:textColor="@color/colorBlack"/>
</LinearLayout>
