<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:padding="24dp">

        <TextView
            android:id="@+id/alert_message1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/alert1"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/alert_message2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/alert2"
            android:textStyle="bold"
            android:textSize="26sp"
            android:textColor="@android:color/black"/>
        <ImageView
            android:id="@+id/alert_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:src="@drawable/baseline_thumb_up_24">
        </ImageView>
        <Button
            android:id="@+id/alert_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:text="@string/ok"/>
    </LinearLayout>
