<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/youracc"
        android:textColor="@color/colorBlack"
        android:layout_marginBottom="16dp"
        android:textSize="24sp"
        android:textAlignment="center"/>

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/tvAlter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvGroesse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/tvGeschlecht"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/tvWasserbedarf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorBlack"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changedata"
        android:backgroundTint="@color/colorDarkCyan"
        android:textColor="@color/colorBlack"/>

    <Button
        android:id="@+id/buttonBackToMainMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backtomainsc"
        android:backgroundTint="@color/colorDarkCyan"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="16dp"/>

</LinearLayout>
