<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".MainMenu.MainScreen">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:ignore="ExtraText">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_top"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorDarkCyan"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <FrameLayout
            android:id="@+id/frameLayout_all"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        //Weather + Location
        <LinearLayout
            android:id="@+id/linearLayout_top"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/toolbar_top"
            android:baselineAligned="false"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables,UselessParent">

            //Left Side
            <LinearLayout
                android:id="@+id/linearLayout_top_left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_above="@+id/findCity"
                    android:orientation="vertical"
                    tools:ignore="ObsoleteLayoutParam">
                    <TextView
                        android:id="@+id/temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="°C"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorBlack"
                        android:paddingStart="20dp"
                        tools:ignore="HardcodedText,RtlSymmetry">
                    </TextView>
                    <TextView
                        android:id="@+id/weatherCondition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="---------"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorBlack"
                        android:paddingStart="20dp"
                        tools:ignore="HardcodedText,RtlSymmetry">
                    </TextView>
                    <TextView
                        android:id="@+id/cityName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Fetching"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorBlack"
                        android:paddingStart="20dp"
                        tools:ignore="HardcodedText,RtlSymmetry">
                    </TextView>
                </LinearLayout>
            </LinearLayout>

            //Right Side
            <LinearLayout
                android:id="@+id/linearLayout_top_right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:id="@+id/weatherSymbol"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/questionmark"
                    tools:ignore="ContentDescription">
                </ImageView>
            </LinearLayout>
        </LinearLayout>

        //Text (Tip Notification)
        <LinearLayout
            android:id="@+id/linearLayout_middle"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/linearLayout_top">

            <TextView
                android:id="@+id/dailyRequirementTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:padding="8dp"
                android:text="@string/daily_requirement"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout_middle"
            android:layout_marginBottom="100dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            tools:ignore="NotSibling">

            <LinearLayout
                android:id="@+id/linearLayout_bottom_left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">
                <TextView
                    android:id="@+id/textView_suggested_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/amount1"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/textView_suggested_amount_number1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"/>
                <ImageView
                    android:id="@+id/imageView_bottle_left"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:importantForAccessibility="no"
                    android:src="@drawable/bottle_100"
                    tools:ignore="NestedWeights"/>
                <TextView
                    android:id="@+id/textView_full_amount_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/full_amount_percentage"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_radio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">
                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp"
                    tools:ignore="UselessParent">
                    <RadioButton
                        android:id="@+id/rb1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:onClick="radio_button_clicked"
                        android:text="@string/quarter_amount"
                        tools:ignore="VisualLintButtonSize">
                    </RadioButton>
                    <RadioButton
                        android:id="@+id/rb2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:onClick="radio_button_clicked"
                        android:text="@string/half_amount"
                        tools:ignore="VisualLintButtonSize">
                    </RadioButton>
                    <RadioButton
                        android:id="@+id/rb3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:onClick="radio_button_clicked"
                        android:text="@string/three_quarters_amount"
                        tools:ignore="VisualLintButtonSize">
                    </RadioButton>
                    <RadioButton
                        android:id="@+id/rb4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:onClick="radio_button_clicked"
                        android:text="@string/full_amount"
                        tools:ignore="VisualLintButtonSize">
                    </RadioButton>
                    <Button
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/oblong"
                        android:text="@string/drunk_it"
                        android:textStyle="bold"
                        tools:ignore="NotSibling,ObsoleteLayoutParam"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_bottom_right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">
                <TextView
                    android:id="@+id/textView_consumed_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/amount2"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/textView_suggested_amount_number2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"/>
                <ImageView
                    android:id="@+id/imageView_bottle_right"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:importantForAccessibility="no"
                    android:src="@drawable/bottle_empty"
                    tools:ignore="NestedWeights"/>
                <TextView
                    android:id="@+id/textView_certain_amount_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/empty_amount_percentage"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>


        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout_all"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/bottomAppBar_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:backgroundTint="@color/colorDarkCyan"
                app:fabCradleMargin="10dp"
                app:fabCradleRoundedCornerRadius="50dp"
                tools:ignore="VisualLintBottomAppBar">
                <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:id="@+id/bottomNavigationView_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    app:labelVisibilityMode="labeled"
                    app:menu="@menu/bottom_nav_menu_home_screen"/>
            </com.google.android.material.bottomappbar.BottomAppBar>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton_bottom"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorDarkCyan"
                android:tint="@color/colorBlack"
                android:src="@drawable/logo_floating_button"
                android:importantForAccessibility="no"
                app:layout_anchor="@id/bottomAppBar_bottom"
                app:maxImageSize="62dp"/>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorBlack"
        android:theme="@style/ThemeOverlay.AppCompat.navTheme"
        app:itemIconTint="@color/colorWhite"
        app:itemTextColor="@color/colorWhite"
        app:headerLayout="@layout/top_left_drawer_menu_home_screen_header"
        app:menu="@menu/top_left_drawer_menu_home_screen"
        tools:ignore="VisualLintBounds" />
</androidx.drawerlayout.widget.DrawerLayout>